[tool.poetry]
name = "threedframe"
version = "0.0.0"
description = "Generate printable joints to create a real puzzle from any 3d model."
authors = ["Braden Mars <bradenmars@bradenmars.me>"]
license = "MIT license"

readme = "README.md"
homepage = "https://github.com/BradenM/threedframe"
repository = "https://github.com/BradenM/threedframe"

keywords = []
classifiers = [
    'Natural Language :: English',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'License :: OSI Approved :: MIT License',
]

include = [
    "README.md", "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.9"
# docs extras
sphinx = { version = "^3.4.3", optional = true }
sphinx-autodoc-typehints = { version = "^1.11.1", optional = true }
recommonmark = { version = "^0.7.1", optional = true }
sphinx_rtd_theme = { version = "^0.5.1", optional = true }
# main
click = "^7.1.2"
rich = "^9.10.0"
solidpython = "^1.0.4"
numpy = "^1.19.5"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
flake8 = "^3.7"
isort = "^5.7.0"
rope = "^0.18.0"
mypy = "^0.800"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-mock = "^3.5.1"
pytest-testmon = "^1.0"
pytest-watch = "^4.2"
pytest-xdist = "^1.30"
docformatter = "^1.4"
pre-commit = "^2.10.0"
pytest-sugar = "^0.9.4"
"fake-bpy-module-2.91" = "^20201216"


[tool.poetry.extras]
docs = ["sphinx", "sphinx-autodoc-typehints", "recommonmark", "sphinx_rtd_theme"]


[tool.poetry.scripts]
3dframe = 'threedframe.cli:main'


[tool.dephell.main]
from = { format = "poetry", path = "pyproject.toml" }
to = { format = "setuppy", path = "setup.py" }

[tool.black]
line-length = 100
skip-string-normalization = false
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
profile = "black"
src_paths = ["threedframe"]
line_length = 100
honor_noqa = true

[tool.pytest.ini_options]
collect_ignore = ['setup.py']
testpaths = "tests"
addopts = "-ra -vv"

[tool.converage.run]
source = "threedframe"

[tool.coverage.report]
exclude_lines = """
	if __name__ == .__main__.:
	"""


[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
